gitops/system/traefik-internal/templates/ingressroutes/argocd-server.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: traefik-internal
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argocd.fmlab.no`)
      priority: 10
      services:
        - name: argocd-server
          port: 80
      middlewares:
        - name: traefik-internal-security@kubernetescrd
    - kind: Rule
      match: Host(`argocd.mgmt.fmlab.no`) && Headers(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: argocd-server
          port: 80
          scheme: h2c
  tls:
    secretName: argocd-server
